@@ -1,3 +1,9 @@
+2008-06-21  Badlop  <badlop@process-one.net>
+
+	* doc/guide.tex: Explain that S2S outgoing first tries IPV4 and if
+	that fails then tries IPv6
+	* doc/guide.html: Likewise
+
 2008-06-18  Badlop  <badlop@process-one.net>
 
 	* src/ejabberd.app: The ejabberd version number is defined in the
